lanecwe-Prod/src/objects/OpportunitySolution__c.object
<CustomObject>
    <fields>
        <fullName>Annual_value__c</fullName>
        <formula>IF( 
AND( 
!( ISPICKVAL( Billing_Frequency__c , &quot;One Time Event&quot;) ),
(Contract_Term__c &gt; 11) 
), 
MRR__c * 12, 
Contract_Value__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BidPrice__c</fullName>
        <label>Sell Price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Freq</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Term</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <formula>IF(ISPICKVAL(Billing_Frequency__c,&apos;Monthly&apos;),BidPrice__c*Number_of_License__c*Contract_Term__c, 
IF(ISPICKVAL(Billing_Frequency__c,&apos;Quarterly&apos;),((BidPrice__c* Number_of_License__c)/3)* Contract_Term__c, 
IF(ISPICKVAL(Billing_Frequency__c,&apos;Annually&apos;),BidPrice__c* Number_of_License__c*( Contract_Term__c/12),BidPrice__c*Number_of_License__c 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <formula>IF(OR(Contract_Term__c = 0, ISPICKVAL( Billing_Frequency__c ,&apos;One Time Event&apos;)),0, 
(Contract_Value__c / Contract_Term__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_License__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Quote__r.Opportunity.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Family__c</fullName>
        <formula>Solution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>OpportunitySolutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>NotInUse_Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>OpportunitySolutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Solution__c</referenceTo>
        <relationshipName>OpportunitySolutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>x-Product Family</label>
    <nameField>
        <displayFormat>SOL-{00000}</displayFormat>
        <label>Opportunity Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Family</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>